# decentralized_cloud

./: .gitignore
cloud/: Cargo.toml  a.txt  b.txt
cloud/data_center/: Cargo.toml  Readme.md
cloud/data_center/client/: Cargo.toml  build.rs
cloud/data_center/client/src/: cli.rs  lib.rs  main.rs  protos.rs
cloud/data_center/service/: Cargo.toml  build.rs
cloud/data_center/service/src/: main.rs
cloud/data_center/src/: main.rs  protos.rs
cloud/resolver/: Readme.md
cloud/resolver/client/: Cargo.toml  Readme.md
cloud/resolver/client/src/: cli.rs  lib.rs  main.rs  protos.rs
cloud/resolver/service/: Cargo.toml  Readme.md
cloud/resolver/service/src/: main.rs  protos.rs
cloud/runtime/: Readme.md
cloud/tooling/proto_builder/: Cargo.toml
cloud/tooling/proto_builder/src/: lib.rs
protos/: deployment.proto
protos/data_center/: data_center.proto
protos/resolver/: resolver_service.proto
testing/binaries/hello_world/: build.sh  hello_world  main.c
testing/programs/hello_world/: hello_world  main.c
