[package]
name = "data_center_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-stream = "0.3.5"
nanoid = "0.4.0"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"

[build-dependencies]
proto_builder = { path = "../../tooling/proto_builder" }
